--- a/example-site/400.html
+++ b/example-site/400.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML 2.0//EN">
 <html>
-<head><title>400 Bad Request</title></head>
+<head><title>404 Not Found</title></head>
 <body>
-<h1>400 Bad Request</h1>
-<p>Your browser sent a request that this server could not understand.<hr/>
+<h1>404 Not Found</h1>
+<p>Page Not Found.<hr/>
 Powered by <a href="https://github.com/xiexianbin/go-httpserver" target="_blank">go-httpserver</a></body>
 </html>
